--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 
 
 
-<!--#include virtual = "/2023/common/inc/head.asp"-->
 
-
+<!-- js -->
+<script type="text/javascript" src="./common/js/jquery-1.8.3.min.js"></script>
 
 <body>
+
+
+<div class="headerInc"></div>
+
+
 
 
 <div class="mainWrap">
 
 
 	<!-- gnb -->
-	<!--#include virtual = "/2023/common/inc/gnb.asp"-->
+	<div class="gnbInc"></div>
 
 	<!-- mainBanner -->
-	<!--#include virtual = "/2023/common/inc/mainBanner.asp"-->
+	<div class="mainBannerInc"></div>
 
 
 
@@ -27,7 +32,7 @@
 			<div class="mainCnt mnCnt01">
 
 				<div class="eduTab">
-					<a href="/2023/books/list.asp" class="cateBnt moShow bgImageSet">
+					<a href="./books/list.asp" class="cateBnt moShow bgImageSet">
 						<span>카테고리</span>
 					</a>
 
@@ -52,7 +57,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -68,7 +73,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -83,7 +88,7 @@
 
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -96,7 +101,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -109,7 +114,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -122,7 +127,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -135,7 +140,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -148,7 +153,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -161,7 +166,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -174,7 +179,7 @@
 						</div>
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover01.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover01.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -192,7 +197,7 @@
 					<div class="eduList" id="maincurri02">
 
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -205,7 +210,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -218,7 +223,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -231,7 +236,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -244,7 +249,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -257,7 +262,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -270,7 +275,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -283,7 +288,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -296,7 +301,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -309,7 +314,7 @@
 							<a class="eduSelect bgImageSet" onclick="javascript:informOpen();"></a>
 						</div>
 						<div class="eduCntWrap">
-							<a href="/2023/books/detail.asp"><img src="/2023/common/img/main/book-cover02.png" alt="">
+							<a href="./books/detail.asp"><img src="./common/img/main/book-cover02.png" alt="">
 								<div class="eduList-TxtsWrap">
 									<div class="eduListTxts">
 										<div class="delivery">★3월29일배송시작★</div>
@@ -355,7 +360,7 @@
 			</div>
 
 			
-			<a href="/2023/books/list.asp" class="pcShow">
+			<a href="./books/list.asp" class="pcShow">
 				<div class="mainCntBtn">
 					<span>교재 더보기</span>
 					<div class="btnArrow bgImageSet"></div>
@@ -383,7 +388,7 @@
 
 
 
-	<!--#include virtual = "/2023/common/inc/midBanner.asp"-->
+	<!--#include virtual = "./common/inc/midBanner.asp"-->
 
 
 
@@ -397,11 +402,11 @@
 			<div class="bookShow">
 
 
-				<a class="bookShowCnt" href="/2023/books/detail.asp">
+				<a class="bookShowCnt" href="./books/detail.asp">
 					<div class="bookTxts">
 
 						<div class="booKTxts-Tit">
-							<div class="bookCover"> <img src="/2023/common/img/main/book-cover02.png" alt="이달의 교재 표지"></div>
+							<div class="bookCover"> <img src="./common/img/main/book-cover02.png" alt="이달의 교재 표지"></div>
 
 							<div class="bookTxtsTop">
 								<h4><span class="pcShow">★3월29일 배송시작★</span>멘토씨리즈 인디자인 CC</h4>
@@ -418,15 +423,15 @@
 
 						<div class="bookTxtsBtm">
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 						</div>
@@ -435,11 +440,11 @@
 
 
 
-				<a class="bookShowCnt" href="/2023/books/detail.asp">
+				<a class="bookShowCnt" href="./books/detail.asp">
 					<div class="bookTxts">
 
 						<div class="booKTxts-Tit">
-							<div class="bookCover"> <img src="/2023/common/img/main/book-cover02.png" alt="이달의 교재 표지"></div>
+							<div class="bookCover"> <img src="./common/img/main/book-cover02.png" alt="이달의 교재 표지"></div>
 
 							<div class="bookTxtsTop">
 								<h4><span class="pcShow">★3월29일 배송시작★</span>멘토씨리즈 인디자인 CC</h4>
@@ -456,15 +461,15 @@
 
 						<div class="bookTxtsBtm">
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 							<div class="bookOther">
-								<div class="bookOtherCover"><img src="/2023/common/img/main/book-reviewImg.png" alt=""></div>
+								<div class="bookOtherCover"><img src="./common/img/main/book-reviewImg.png" alt=""></div>
 								<div class="bookOtherTit">POINT. 고급스킬</div>
 							</div>
 						</div>
@@ -472,7 +477,7 @@
 				</a><!-- bookShowCnt -->
 
 
-				<a href="/2023/books/list.asp" class="moShow">
+				<a href="./books/list.asp" class="moShow">
 					<div class="mainCntBtn">
 						<span>이달의 교재 더보기</span>
 						<div class="btnArrow bgImageSet"></div>
@@ -486,8 +491,9 @@
 
 
 
-		<!-- footer -->
-		<!--#include virtual = "/2023/common/inc/footer.asp"-->
+	<!-- footer -->
+	<div class="footerInc"></div>
+
 
 
 
@@ -498,4 +504,10 @@
 </body>
 </html>
 
+<script>
+$('.headerInc').load('./common/inc/head.html');
+$('.gnbInc').load('./common/inc/gnb.html');
+$('.mainBannerInc').load('./common/inc/mainBanner.html');
+$('.footerInc').load('./common/inc/footer.html');
 
+</script>
