--- a/common/inc/footer.html
+++ b/common/inc/footer.html
@@ -9,7 +9,7 @@
 			
 			<div class="mo-callBox moShow">
 				<a href='tel:1588-7089' class="btn">
-					<img src="/2023/common/img-mo/main/mo-call.png" alt="">
+					<img src="./common/img-mo/main/mo-call.png" alt="">
 					<span>고객상담센터 연결</span>
 				</a>
 			</div>
@@ -25,9 +25,9 @@
 
 			<div class="ftrMid">
 				<ul>
-					<li><a href="/2023/customer/policy.asp">이용약관</a></li>
-					<li><a href="/2023/customer/privacy.asp">개인정보 처리방침</a></li>
-					<li><a href="/2023/customer/faq.asp">자주하는 질문</a></li>
+					<li><a href="./customer/policy.asp">이용약관</a></li>
+					<li><a href="./customer/privacy.asp">개인정보 처리방침</a></li>
+					<li><a href="./customer/faq.asp">자주하는 질문</a></li>
 				</ul>
 
 				<p>코리아교육그룹 교재몰   |  원격평생교육시설 제 408호   <br class="moShow">|  통신판매번호 제 2019-서울강남-01371호  |  Tel : 1588-7089<br>
@@ -39,7 +39,7 @@
 			</div>
 
 			<div class="ftrRht">
-				<div class="ftrRhtTit">FAMILY SITE <img src="/2023/common/img/main/downArrow.png" alt=""></div>
+				<div class="ftrRhtTit">FAMILY SITE <img src="./common/img/main/downArrow.png" alt=""></div>
 				<ul>
 					<li><a href="https://www.sbsart.com/" target="_blank">SBS컴퓨터아트학원</a></li>
 					<li><a href="https://www.sbsgameacademy.com/" target="_blank">SBS아카데미게임학원</a></li>
@@ -67,7 +67,7 @@
 <div id="ex1" class="modal">
 	<h5> 개인정보처리방침 안내</h5>
 	<div class="currituitionPrvcy">
-		<!--#include virtual = "/2023/customer/privacy_txt.asp"-->
+		<!--#include virtual = "./customer/privacy_txt.asp"-->
     </div>
 	<div class="btnC">
 		<a href="#" rel="modal:close" class="btnType001">확인</a>
@@ -79,7 +79,7 @@
 <div id="ex2" class="modal">
 	<h5> 이용약관 안내사항</h5>
 	<div class="currituitionPrvcy">
-		<!--#include virtual = "/2023/customer/buy_txt.asp"-->
+		<!--#include virtual = "./customer/buy_txt.asp"-->
     </div>
 	<div class="btnC">
 		<a href="#" rel="modal:close" class="btnType001">확인</a>
@@ -88,7 +88,7 @@
 
 
 <!-- 장바구니 알림창 팝업 -->
-<!--#include virtual = "/2023/customer/purchase_inform.asp"-->
+<!--#include virtual = "./customer/purchase_inform.asp"-->
 
 <script>
 //장바구니 팝업오픈
