--- a/common/inc/quick-menu.html
+++ b/common/inc/quick-menu.html
@@ -2,8 +2,8 @@
 		<div class="quickMenu">
 			<ul class="quickTop">
 				<li class="quick-deliver">
-					<a href="/2023/mypage/purchase.asp">
-						<img src="/2023/common/img/main/quick-deliver.png" alt="">
+					<a href="./mypage/purchase.asp">
+						<img src="./common/img/main/quick-deliver.png" alt="">
 						<span>배송조회</span>
 					</a>
 					<div class="quickInfo">
@@ -11,15 +11,15 @@
 					</div>
 				</li>
 				<li class="quick-talk">
-					<a href="/2023/mypage/inquiry.asp">
-						<img src="/2023/common/img/main/quick-talk.png" alt="">
+					<a href="./mypage/inquiry.asp">
+						<img src="./common/img/main/quick-talk.png" alt="">
 						<span>상담</span>
 					</a>
 
 				</li>
 				<li class="quick-bookmark">
-					<a href="/2023/mypage/cart.asp">
-						<img src="/2023/common/img/main/quick-bookmark.png" alt="">
+					<a href="./mypage/cart.asp">
+						<img src="./common/img/main/quick-bookmark.png" alt="">
 						<span>장바구니</span>
 					</a>
 
